Stopped the icon wrapping

--- a/gsusa/content/src/main/theme/custom/scss/components/_article-tile.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_article-tile.scss
@@ -250,3 +250,6 @@ $lines-to-show: 3;
 	}
   }
 }
+  .clearboth{
+    clear:both;
+  } 
